docs/api/qiskit/0.24/qiskit.optimization.problems.Variable.md
---
title: Variable
description: API reference for qiskit.optimization.problems.Variable
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.optimization.problems.Variable
---

<span id="qiskit-optimization-problems-variable" />

# qiskit.optimization.problems.Variable

<span id="qiskit.optimization.problems.Variable" />

`Variable(quadratic_program, name, lowerbound=0, upperbound=1e+20, vartype=<VarType.CONTINUOUS: 0>)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/optimization/problems/variable.py "view source code")

Representation of a variable.

Creates a new Variable.

The variables is exposed by the top-level QuadraticProgram class in QuadraticProgram.variables. This constructor is not meant to be used externally.

**Parameters**

*   **quadratic\_program** (`Any`) – The parent QuadraticProgram.
*   **name** (`str`) – The variable name.
*   **lowerbound** (`Union`\[`float`, `int`]) – The variable lowerbound.
*   **upperbound** (`Union`\[`float`, `int`]) – The variable upperbound.
*   **vartype** (`VarType`) – The variable type.

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – if lowerbound is greater than upperbound.

### \_\_init\_\_

<span id="qiskit.optimization.problems.Variable.__init__" />

`__init__(quadratic_program, name, lowerbound=0, upperbound=1e+20, vartype=<VarType.CONTINUOUS: 0>)`

Creates a new Variable.

The variables is exposed by the top-level QuadraticProgram class in QuadraticProgram.variables. This constructor is not meant to be used externally.

**Parameters**

*   **quadratic\_program** (`Any`) – The parent QuadraticProgram.
*   **name** (`str`) – The variable name.
*   **lowerbound** (`Union`\[`float`, `int`]) – The variable lowerbound.
*   **upperbound** (`Union`\[`float`, `int`]) – The variable upperbound.
*   **vartype** (`VarType`) – The variable type.

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – if lowerbound is greater than upperbound.

## Methods

|                                                                                                                                                |                                                 |
| ---------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------- |
| [`__init__`](#qiskit.optimization.problems.Variable.__init__ "qiskit.optimization.problems.Variable.__init__")(quadratic\_program, name\[, …]) | Creates a new Variable.                         |
| [`as_tuple`](#qiskit.optimization.problems.Variable.as_tuple "qiskit.optimization.problems.Variable.as_tuple")()                               | Returns a tuple corresponding to this variable. |

## Attributes

|                                                                                                                                           |                                         |
| ----------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------- |
| [`lowerbound`](#qiskit.optimization.problems.Variable.lowerbound "qiskit.optimization.problems.Variable.lowerbound")                      | Returns the lowerbound of the variable. |
| [`name`](#qiskit.optimization.problems.Variable.name "qiskit.optimization.problems.Variable.name")                                        | Returns the name of the variable.       |
| [`quadratic_program`](#qiskit.optimization.problems.Variable.quadratic_program "qiskit.optimization.problems.Variable.quadratic_program") | Returns the parent QuadraticProgram.    |
| [`upperbound`](#qiskit.optimization.problems.Variable.upperbound "qiskit.optimization.problems.Variable.upperbound")                      | Returns the upperbound of the variable. |
| [`vartype`](#qiskit.optimization.problems.Variable.vartype "qiskit.optimization.problems.Variable.vartype")                               | Returns the type of the variable.       |

<span id="qiskit.optimization.problems.Variable.Type" />

### Type

alias of `VarType`

### as\_tuple

<span id="qiskit.optimization.problems.Variable.as_tuple" />

`as_tuple()`

Returns a tuple corresponding to this variable.

**Return type**

`Tuple`\[`str`, `Union`\[`float`, `int`], `Union`\[`float`, `int`], `VarType`]

**Returns**

A tuple corresponding to this variable consisting of name, lowerbound, upperbound and variable type.

### lowerbound

<span id="qiskit.optimization.problems.Variable.lowerbound" />

`property lowerbound`

Returns the lowerbound of the variable.

**Return type**

`Union`\[`float`, `int`]

**Returns**

The lower bound of the variable.

### name

<span id="qiskit.optimization.problems.Variable.name" />

`property name`

Returns the name of the variable.

**Return type**

`str`

**Returns**

The name of the variable.

### quadratic\_program

<span id="qiskit.optimization.problems.Variable.quadratic_program" />

`property quadratic_program`

Returns the parent QuadraticProgram.

**Return type**

`Any`

**Returns**

The parent QuadraticProgram.

### upperbound

<span id="qiskit.optimization.problems.Variable.upperbound" />

`property upperbound`

Returns the upperbound of the variable.

**Return type**

`Union`\[`float`, `int`]

**Returns**

The upperbound of the variable.

### vartype

<span id="qiskit.optimization.problems.Variable.vartype" />

`property vartype`

Returns the type of the variable.

**Return type**

`VarType`

**Returns**

The variable type.

